# delanocreds

./: .gitignore  Cargo.toml  README.md  SPEC.md  build.bat  justfile
.cargo/: config.toml
.github/workflows/: rust.yml
crates/delano-crypto/: Cargo.toml  README.md
crates/delano-crypto/src/: basic.rs  lib.rs  seed.rs  types.rs
crates/delano-events/: Cargo.toml  README.md
crates/delano-events/src/: lib.rs  utils.rs
crates/delano-keys/: Cargo.toml  README.md
crates/delano-keys/src/: error.rs  kdf.rs  lib.rs  publish.rs  vk.rs
crates/delano-leptos-site/: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
crates/delano-leptos-site/.cargo/: config.toml
crates/delano-leptos-site/src/: app.rs  main.rs
crates/delano-leptos-site/src/app/: home.rs  list.rs  screens.rs
crates/delano-leptos-site/src/app/components/: accept.rs  attributes.rs  encrypted_key.rs  error.rs  list.rs  mod.rs  nav.rs  offer.rs  qrcode.rs
crates/delano-leptos-site/src/app/constants/: mod.rs
crates/delano-leptos-site/src/app/routes/: account.rs  authd.rs  home.rs  mod.rs  test.rs
crates/delano-leptos-site/src/app/state/: mod.rs
crates/delano-leptos-site/style/: output.css
crates/delano-secrets/: Cargo.toml  README.md
crates/delano-secrets/src/: lib.rs
crates/delano-wallet/: Cargo.toml  README.md
crates/delano-wallet-core/: Cargo.toml  README.md
crates/delano-wallet-core/src/: lib.rs
crates/delano-wallet/src/: bindings.rs  conversions.rs  error.rs  lib.rs  utils.rs
crates/delano-wallet/tests/: mod.rs
crates/delano-wallet/wit/: delanocreds.wit
crates/delano-wasm-bindgen/: Cargo.toml  README.md
crates/delano-wasm-bindgen/src/: lib.rs
crates/delano-wit/: Cargo.toml
crates/delano-wit-ui/: Cargo.toml  README.md  index.html  tailwind.config.js
crates/delano-wit-ui/src/: api.rs  attributes.rs  bindings.rs  credential.rs  input.rs  issuer.rs  lib.rs  offer.rs  output.rs  page.rs  state.rs  util.rs
crates/delano-wit-ui/src/templates/: accept.html  attributes.html  create.html  index.html  kov.html  maxentries.html  offer.html  output.html  verify.html
crates/delano-wit-ui/style/: output.css
crates/delano-wit-ui/tests/: mod.rs
crates/delano-wit-ui/wit/: world.wit
crates/delano-wit/src/: lib.rs
crates/delano-wit/tests/: mod.rs
crates/delano-wit/wit/: delanocreds.wit  world.wit
crates/delanocreds/: Cargo.toml  README.md
crates/delanocreds/src/: attributes.rs  config.rs  ec.rs  entry.rs  error.rs  keypair.rs  lib.rs  set_commits.rs  types.rs  utils.rs  zkp.rs
crates/delanocreds/src/ec/: univarpoly.rs
crates/delanocreds/src/keypair/: spseq_uc.rs
crates/delanocreds/test/fixtures/: proof_nym.json
crates/delanocreds/tests/: mod.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/delanocreds/: all.html  index.html  sidebar-items.js  struct.CredentialBuilder.html  struct.EntryBuilder.html  struct.OfferBuilder.html  struct.ProofBuilder.html  struct.RootIssuer.html  struct.RootIssuerBuilder.html
docs/delanocreds/attributes/: fn.attribute.html  fn.from_cid.html  index.html  sidebar-items.js  struct.Attribute.html  struct.AttributeEntries.html  struct.AttributeEntry.html  struct.AttributeName.html  struct.AttributeValue.html
docs/delanocreds/config/: constant.CHALLENGE_STATE_NAME.html  constant.DEFAULT_MAX_CARDINALITY.html  constant.DEFAULT_MAX_ENTRIES.html  index.html  sidebar-items.js
docs/delanocreds/entry/: fn.convert_entry_to_bn.html  fn.entry.html  index.html  sidebar-items.js  struct.Entry.html  struct.MaxEntries.html
docs/delanocreds/keypair/: enum.IssuerError.html  enum.VK.html  fn.verify.html  fn.verify_proof.html  index.html  sidebar-items.js  struct.CredOffer.html  struct.CredProof.html  struct.DelegatedCred.html  struct.Issuer.html  struct.IssuerPublic.html  struct.MaxCardinality.html  struct.MaxEntries.html  struct.Nym.html  struct.NymProof.html  struct.NymPublic.html  struct.Offer.html  struct.Signature.html  struct.Signer.html  struct.UserKey.html
docs/delanocreds/keypair/spseq_uc/: enum.UpdateError.html  fn.change_rel.html  fn.change_rep.html  fn.rndmz_pk.html  index.html  sidebar-items.js  struct.Credential.html  struct.RandomizedPubKey.html  type.OpeningInformation.html  type.UpdateKey.html
docs/delanocreds/set_commits/: fn.generate_pre_commit.html  fn.mul_and_fold.html  fn.not_intersection.html  index.html  sidebar-items.js  struct.CrossSetCommitment.html  struct.ParamSetCommitment.html  struct.SetCommitment.html  trait.Commitment.html
docs/delanocreds/types/: enum.Generator.html  enum.Group.html  index.html  sidebar-items.js  struct.GeneratorG1.html  struct.GeneratorG2.html  type.CommitmentType.html
docs/delanocreds/utils/: fn.attribute.html  fn.convert_entry_to_bn.html  fn.convert_mess_to_bn.html  fn.convert_mhash_to_bn.html  fn.ec_sum.html  fn.entry.html  fn.polyfromroots.html  index.html  sidebar-items.js  struct.Attribute.html  struct.Entry.html  struct.Pedersen.html  struct.PedersenOpen.html  type.PedersenCommit.html  type.Trapdoor.html
docs/delanocreds/zkp/: enum.Generator.html  index.html  sidebar-items.js  struct.ChallengeState.html  struct.DamgardTransform.html  struct.Pedersen.html  struct.PedersenOpen.html  struct.ZKPSchnorr.html  struct.ZkpSchnorrFiatShamir.html  trait.Schnorr.html  type.Challenge.html  type.PedersenCommit.html  type.Response.html
docs/delanocreds_bin/: all.html  fn.basic_bench.html  fn.bench_30_of_100.html  fn.main.html  index.html  sidebar-items.js
docs/implementors/core/cmp/: trait.Eq.js  (+1 more)
docs/src/delanocreds/: attributes.rs.html  config.rs.html  entry.rs.html  keypair.rs.html  lib.rs.html  set_commits.rs.html  types.rs.html  utils.rs.html  zkp.rs.html
docs/src/delanocreds_bin/: main.rs.html
examples/: main.rs
examples/svelte-wit-ui/: README.md  compose-config.yml  justfile  package-lock.json  package.json  vite.config.js
src/: attributes.rs  config.rs  dac.rs  entry.rs  keypair.rs  lib.rs  main.rs  set_commits.rs  spseq_uc.rs  types.rs  utils.rs  zkp.rs
src/keypair/: spseq_uc.rs
tests/: mod.rs  smoke.rs  wasm.rs
(+28 files in other folders)
