[workspace]
members = [".", "crates/*"]
resolver = "2"

[workspace.dependencies]
delanocreds = { path = "crates/delanocreds" }
delano-keys = { path = "crates/delano-keys" }
delano-wit-ui = { path = "crates/delano-wit-ui" }
blastkids = "0.1"
bls12_381_plus = { version = "0.8.11", features = ["expose-fields", "alloc"] }
secrecy = "0.8"
base64 = "0.21.4"

[profile.release]
codegen-units = 1        # allow for maximum size reduction optimizations
debug = false
debug-assertions = false
incremental = false
lto = true               # Enable Link Time Optimization
opt-level = 'z'          # Optimize for size
overflow-checks = false
panic = 'abort'          # Abort on panic
rpath = false
strip = true             # Automatically strip symbols from the binary.

[patch.crates-io]
bls12_381_plus = { git = "https://github.com/DougAnderson444/bls12_381_plus", branch = "fix-reduce-error-wasm32" }
