[workspace]
members = [".", "crates/*"]
resolver = "2"

[workspace.dependencies]
delanocreds = { path = "crates/delanocreds" }
delano-keys = { path = "crates/delano-keys" }
delano-wit-ui = { path = "crates/delano-wit-ui" }
delano-events = { path = "crates/delano-events" }
bls12_381_plus = { version = "0.8.13", git="https://github.com/mikelodder7/bls12_381_plus.git", rev = "91a399e9a5f326816f13a0feab898ff40a7a1599", features = ["expose-fields", "alloc"] }

secrecy = "0.8"

[profile.release]
codegen-units = 1        # allow for maximum size reduction optimizations
debug = false
debug-assertions = false
incremental = false
lto = true               # Enable Link Time Optimization, see: https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
opt-level = 'z'          # Optimize for size
overflow-checks = false
panic = 'abort'          # Abort on panic
rpath = false
strip = true             # Automatically strip symbols from the binary.

[patch.crates-io]
# patch until release, see: https://github.com/bytecodealliance/wit-bindgen/issues/890
wit-bindgen-rt = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "9c913f6" }
