[workspace]
members = [".", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["Doug Anderson"]
description = "Delanocreds, Delegatable Anonymous Credentials in pure Rust"
repository = "https://github.com/DougAnderson444/delanocreds"

[workspace.dependencies]
delanocreds = { version = "0.2.0", path = "crates/delanocreds" }
delano-keys = { version = "0.2.0", path = "crates/delano-keys" }
delano-wit-ui = { version = "0.2.0", path = "crates/delano-wit-ui" }
delano-events = { version = "0.2.0", path = "crates/delano-events" }
bls12_381_plus = { version = "0.8.16", features = ["expose-fields", "alloc"] }

secrecy = "0.8"

[profile.release]
codegen-units = 1        # allow for maximum size reduction optimizations
debug = false
debug-assertions = false
incremental = false
lto = true               # Enable Link Time Optimization, see: https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
opt-level = 'z'          # Optimize for size
overflow-checks = false
panic = 'abort'          # Abort on panic
rpath = false
strip = true             # Automatically strip symbols from the binary.
