[package]
name = "delano-events"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
delano-keys = { path = "../delano-keys", features = ["publish"] }
delanocreds = { path = "../delanocreds" }
base64ct = { version = "1.6.0", features = ["alloc"] }
ciborium = "0.2.2"

