[package]
name = "delano-keys"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
blastkids = { version = "0.1.4", optional = true } 
bls12_381_plus = { workspace = true, features = ["alloc"], optional = true }
cid = { version = "0.10.1", optional = true }
secrecy = "0.8.0"
serde = { version = "1.0.130", features = ["derive"], optional = true }
serde_json = "1.0"
getrandom = "0.2"

[features]
default = ["serde"]
deterministic = ["blastkids", "bls12_381_plus", "serde"]
vk = ["blastkids", "bls12_381_plus", "serde"]
publish = ["cid"]
