[package]
name = "delano-keys"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
blastkids = { git = "https://github.com/DougAnderson444/blastkids.git", version ="0.1.6" }
bls12_381_plus = { version = "0.8.13", git= "https://github.com/mikelodder7/bls12_381_plus.git", rev = "91a399e9a5f326816f13a0feab898ff40a7a1599", features = ["expose-fields", "alloc"] }
cid = { version = "0.10.1", optional = true }
secrecy = "0.8.0"
serde = { version = "1.0.130", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
getrandom = "0.2"

[features]
default = ["serde"]
publish = ["cid", "serde_json"]
