[package]
name = "delano-keys"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
blastkids = { version ="0.2.0" }
bls12_381_plus = { workspace = true, features = ["expose-fields", "alloc"] }
cid = { version = "0.11.1", optional = true }
secrecy = "0.8.0"
serde = { version = "1.0.130", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
getrandom = "0.2"
sha2 = "0.10"

[dev-dependencies]
rand = "0.8"

[features]
default = ["serde", "publish"]
publish = ["cid", "serde_json"]
