[package]
description = "Delanocreds: Delegated Anonymous Credentials"
edition = "2021"
license = "MIT"
name = "delano-leptos-site"
readme = "https://github.com/DougAnderson444/delanocreds"
repository = "https://github.com/DougAnderson444/delanocreds"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.0", features = ["csr", "nightly"], default-features = false }
leptos_meta = { version = "0.5.0", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.0", features = ["csr", "nightly"] }

base64 = { workspace = true }
wasm-logger = { version = "0.2.0", optional = true }
cfg-if = "1"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
seed-keeper-core = "0.3"
delano-keys = { workspace = true, features = ["serde"] }
delanocreds = { workspace = true, features = ["serde", "serde_json"] }
console_error_panic_hook = { version = "0.1.7" }
qrcode-generator = "4.1.9"
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.4"
serde_bytes = "0.11"
ciborium = "0.2.1"
gloo-storage = "0.3.0"

[dependencies.web-sys]
version = "0.3"
features = ["Clipboard", "Window", "Navigator", "Permissions", "Blob", "BlobPropertyBag", "EndingTypes", "Url"]
# [patch.crates-io]
# seed-keeper-core = { version = "0.3", git = "https://github.com/DougAnderson444/seed-keeper", branch = "master" }

