[package]
name = "delano-wallet-core"
edition = "2021"
version = "0.1.3"
license = "MIT"
documentation = "https://docs.rs/delano-wallet-core"
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
delanocreds = { version = "^0.2", workspace = true }
delano-keys = { version = "0.1.1", workspace = true }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1.6"
