[package]
name = "delano-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
delanocreds = { path ="../delanocreds" }
delano-keys = { workspace = true, features = ["deterministic"] }
thiserror = "1.0"
wit-bindgen = { version = "0.16.0", default-features = false, features = ["realloc"] }

[dev-dependencies]
wasmtime = { version = "17", features = ['component-model'] }
wasmtime-wasi = "17.0.0"
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "delano:wallet"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"seed-keeper:wallet" = { path = "wit/deps/seed-keeper-wallet" }
