[package]
name = "delano-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
delanocreds = { path ="../delanocreds" }
delano-keys = { workspace = true  }
thiserror = "1.0"
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }

[dev-dependencies]
wasmtime = { version = "18", features = ['component-model'] }
wasmtime-wasi = "18.0.1"
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "delano:wallet"

# It's not documented, but you can use `package.metadata.component.bindings` to
# set additional derive attributes for the generated bindings:
[package.metadata.component.bindings]
derives = ["PartialEq"]
format = false

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"seed-keeper:wallet" = { path = "wit/deps/seed-keeper-wallet" }
