[package]
authors = ["Doug Anderson <douganderson444@peerpiper.io>"]
edition = "2021"
license = "MIT"
name = "delano-wasm-bindgen"
repository = "https://github.com/DougAnderson444/delanocreds"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
blastkids = { workspace = true }
delanocreds = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
lazy_static = "1.4.0"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
