[package]
name = "delano-wit-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.6.0"
wurbo = { version = "0.1.6" }

[dev-dependencies]
wasmtime = { version = "16", features = ['component-model'] }
wasmtime-wasi = { version = "16.0.0" }
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "delano:wit-ui"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"delano:wallet" = { path = "../delano-wallet/wit" }
