[package]
name = "delano-wit-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.6.0"
wurbo = { version = "0.1.8" }
base64ct = { version = "1.6.0", features = ["alloc"] }
serde = { version = "1.0.130", features = ["derive"] }
convert_case = "0.6.0"

[dev-dependencies]
wasmtime = { version = "16", features = ['component-model'] }
wasmtime-wasi = { version = "16.0.0" }
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "delano:wit-ui"

# It's not documented, but you can use `package.metadata.component.bindings` to
# set additional derive attributes for the generated bindings:
[package.metadata.component.bindings]
derives = []

[package.metadata.component.dependencies]

# wasmtime needs these deps linked here to compile ./tests/mod.rs
[package.metadata.component.target.dependencies]
"delano:wallet" = { path = "../delano-wallet/wit" }
"seed-keeper:wallet" = { path = "../delano-wallet/wit/deps/seed-keeper-wallet" }
