[package]
name = "delano-wit-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
wurbo = { version = "0.1.9" }
base64ct = { version = "1.6.0", features = ["alloc"] }
chrono = "0.4.33"
ciborium = "0.2.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.107" }
convert_case = "0.6.0"
delanocreds = { workspace = true }
delano-keys = { workspace = true }
delano-events = { workspace = true }
# wit-bindgen = { version = "0.19.1", default-features = false, features = ["realloc"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitflags = "2.4.2"
wit-bindgen-rt = "0.22.0"

[dev-dependencies]
wasmtime = { version = "18", features = ['component-model'] }
wasmtime-wasi = { version = "18.0" }
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "delano:wit-ui"

# It's not documented, but you can use `package.metadata.component.bindings` to
# set additional derive attributes for the generated bindings:
[package.metadata.component.bindings]
derives = ["serde::Serialize", "serde::Deserialize"]

[package.metadata.component.dependencies]

# wasmtime needs these deps linked here to compile ./tests/mod.rs
[package.metadata.component.target.dependencies]
"delano:wallet" = { path = "wit/deps/wallet" }
"seed-keeper:wallet" = { path = "../delano-wallet/wit/deps/seed-keeper-wallet" }
