[package]
edition = "2021"
license = "MIT"
name = "delanocreds"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bls12_381_plus = { workspace = true } 
delano-keys = { workspace = true, features = ["serde", "vk"] }
anyhow = "1.0.70"
cid = "0.10.1"
secrecy = "0.8.0"
sha2 = { version = "0.10" }
rand = "0.8.5"
rayon = "1.8.0"
log = "0.4"
env_logger = "0.10.0"
base64 = { workspace = true }
blastkids = { workspace = true }
thiserror = "1.0.49"
ciborium = "0.2.1"

# optional dependencies, enabled by default (see features below)
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0.107", optional = true }
serde_with = { version = "3.3.0", optional = true, features = ["base64"] }

[dev-dependencies]
lazy_static = "1.4.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

# serde feature turns on all the optional serde deps 
[features]
default = ["serde", "serde_json", "serde_with"]
# json = ["serde_with", "serde_json"]

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }
