[package]
edition = "2021"
license = "MIT"
name = "delanocreds"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bls12_381_plus = { version = "0.8.13", git="https://github.com/mikelodder7/bls12_381_plus.git", rev = "91a399e9a5f326816f13a0feab898ff40a7a1599", features = ["expose-fields", "alloc"] }
delano-keys = { path = "../delano-keys" }
anyhow = "1.0.70"
cid = "0.10.1"
secrecy = "0.8.0"
sha2 = { version = "0.10" }
rand = "0.8.5"
rayon = "1.8.0"
log = "0.4"
env_logger = "0.10.0"
thiserror = "1.0.49"
ciborium = "0.2.1"

# optional dependencies, enabled by default (see features below)
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0.107", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

# serde feature turns on all the optional serde deps 
[features]
default = ["serde", "serde_json"]
# json = ["serde_json"]

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }
